--- a/docs/content/docs/cli.mdx
+++ b/docs/content/docs/cli.mdx
@@ -6,7 +6,8 @@ description: Command-line tools for code generation, validation, and migrations
 import { Callout } from 'fumadocs-ui/components/callout'
 
 <Callout type="info" title="Built for AI Agents">
-  Corsair CLI is designed to work with AI coding agents like Claude Code and Cursor.
+  Corsair CLI is designed to work with AI coding agents like Claude Code and
+  Cursor.
 </Callout>
 
 ## Available Commands
@@ -69,24 +70,84 @@ schema with your database.
 
 ## AI Agent Commands
 
+<Callout type="warn" title="Important for AI Agents">
+  Agents MUST use these CLI commands to generate queries and mutations. DO NOT
+  write query/mutation code manually. The CLI ensures proper type safety,
+  exports, and schema alignment.
+</Callout>
+
 Corsair has specialized commands designed for AI coding agents to generate
-queries and mutations:
+queries and mutations using natural language:
 
 ### Query Generation
+
+Generate a new query with the `-n` (name) and `-i` (instructions) flags:
 
 ```bash
 pnpm corsair query -n "get all albums by artist id" -i "return all albums in descending order (recent ones first)"
 ```
 
+**More Query Examples:**
+
+```bash
+pnpm corsair query -n "getPostsWithAuthors" -i "fetch all posts with author details from posts and users tables"
+```
+
+```bash
+pnpm corsair query -n "getCommentsByPostId" -i "get all comments for a specific post ID including author information"
+```
+
+```bash
+pnpm corsair query -n "getUserProfile" -i "fetch user profile with their posts count and recent activity"
+```
+
 ### Mutation Generation
+
+Generate a new mutation:
 
 ```bash
 pnpm corsair mutation -n "create album" -i "create a new album with validation"
 ```
 
+**More Mutation Examples:**
+
+```bash
+pnpm corsair mutation -n "createPost" -i "create a new post with title, content, and author ID"
+```
+
+```bash
+pnpm corsair mutation -n "updateComment" -i "update an existing comment's content by comment ID"
+```
+
+```bash
+pnpm corsair mutation -n "deletePost" -i "delete a post and all its associated comments by post ID"
+```
+
+### Updating Existing Queries/Mutations
+
+Use the `-u` flag to update an existing query or mutation:
+
+```bash
+pnpm corsair query -n "getPostsWithAuthors" -i "fetch all published posts with author details, sorted by created date" -u
+```
+
+```bash
+pnpm corsair mutation -n "createAlbum" -i "create a new album with validation and send Slack notification" -u
+```
+
+### How It Works
+
+When you run these commands, Corsair:
+
+1. **Generates the file** in the appropriate folder (`corsair/queries/` or `corsair/mutations/`)
+2. **Auto-exports** the procedure in the index.ts file
+3. **Returns the path** where the query/mutation was generated
+4. **Validates types** against your schema
+
 <Callout type="info" title="Natural Language">
   These commands accept natural language descriptions and generate type-safe
-  TypeScript code that matches your schema.
+  TypeScript code that matches your database schema. Be as specific as possible
+  in your instructions for better results.
 </Callout>
 
 ## Configuration
@@ -133,4 +194,3 @@ jobs:
   When your database schema changes, Corsair will detect affected queries and
   mutations during the check command, preventing runtime errors.
 </Callout>
-
