--- a/docs/content/docs/adapters.mdx
+++ b/docs/content/docs/adapters.mdx
@@ -130,9 +130,11 @@ export const POST = handler
 
 ## Database Adapters
 
-Corsair currently supports Drizzle ORM with Postgres:
+Corsair supports both Drizzle ORM and Prisma with Postgres:
 
 ### Drizzle + Postgres
+
+Set up your Drizzle database client:
 
 ```ts title="db/index.ts"
 import { drizzle } from 'drizzle-orm/node-postgres'
@@ -146,7 +148,69 @@ const pool = new Pool({
 export const db = drizzle(pool, { schema })
 ```
 
+Configure Corsair to use Drizzle:
+
+```ts title="corsair.config.ts"
+import { type CorsairConfig } from 'corsair'
+import { db } from './db'
+
+export const config = {
+  dbType: 'postgres',
+  orm: 'drizzle',
+  framework: 'nextjs',
+  pathToCorsairFolder: './corsair',
+  apiEndpoint: process.env.NEXT_PUBLIC_CORSAIR_API_ROUTE!,
+  db: db,
+  schema: db._.schema!,
+  connection: process.env.DATABASE_URL!,
+} satisfies CorsairConfig<typeof db>
+```
+
+### Prisma + Postgres
+
+Set up your Prisma database client:
+
+```ts title="db/index.ts"
+import 'server-only'
+import { PrismaClient } from '@prisma/client'
+
+const globalForPrisma = globalThis as unknown as {
+  prisma: PrismaClient | undefined
+}
+
+export const db = globalForPrisma.prisma ?? new PrismaClient()
+
+if (process.env.NODE_ENV !== 'production') globalForPrisma.prisma = db
+
+export type DB = typeof db
+```
+
+Configure Corsair to use Prisma:
+
+```ts title="corsair.config.ts"
+import { type CorsairConfig } from 'corsair'
+import { db } from './db'
+import { Prisma } from '@prisma/client'
+
+export const config = {
+  dbType: 'postgres',
+  orm: 'prisma',
+  framework: 'nextjs',
+  pathToCorsairFolder: './corsair',
+  apiEndpoint: process.env.NEXT_PUBLIC_CORSAIR_API_ROUTE!,
+  db: db,
+  schema: Prisma.dmmf.datamodel,
+  connection: process.env.DATABASE_URL!,
+} satisfies CorsairConfig<typeof db>
+```
+
+<Callout type="info" title="Key Configuration Differences">
+  **Drizzle:** Use `orm: 'drizzle'` and `schema: db._.schema!`
+  
+  **Prisma:** Import Prisma, use `orm: 'prisma'` and `schema: Prisma.dmmf.datamodel`
+</Callout>
+
 <Callout type="warn" title="Coming Soon">
-  Support for Prisma, Express, Fastify, Hono, and other frameworks is in development.
+  Support for Express, Fastify, Hono, and other frameworks is in development.
 </Callout>
 
