--- a/docs/content/docs/quickstart.mdx
+++ b/docs/content/docs/quickstart.mdx
@@ -5,6 +5,10 @@ description: Get up and running with Corsair in 5 steps
 
 import { Callout } from 'fumadocs-ui/components/callout'
 
+<Callout type="info" title="Automated Setup">
+  Want to skip the manual setup? Run `pnpm corsair init` to automatically generate all necessary files and folders. This guide shows the manual setup for learning purposes.
+</Callout>
+
 ## 1. Create Corsair Config
 
 Create a `corsair.config.ts` file in your project root:
