--- a/docs/content/docs/installation.mdx
+++ b/docs/content/docs/installation.mdx
@@ -9,28 +9,43 @@ import { Callout } from 'fumadocs-ui/components/callout'
   You'll need a Next.js project with Drizzle ORM and Postgres already set up.
 </Callout>
 
-## Install Corsair
+## Quick Start with Init Command
+
+The fastest way to get started is to use the init command, which will install all dependencies automatically:
+
+```bash
+npm install -g corsair
+pnpm corsair init
+```
+
+The init command will guide you through setup and install all required packages.
+
+## Manual Installation (Optional)
+
+If you prefer to install packages manually, follow these steps:
+
+### Install Corsair
 
 ```bash
 npm install corsair
 ```
 
-## Install Required Dependencies
+### Install Required Dependencies
 
 Corsair requires several peer dependencies for full functionality:
 
 ```bash
 npm install @tanstack/react-query @trpc/server @trpc/client @trpc/tanstack-react-query
-npm install drizzle-orm drizzle-zod zod superjson dotenv
+npm install drizzle-orm drizzle-zod zod superjson dotenv server-only
 ```
 
-## Install Dev Dependencies
+### Install Dev Dependencies
 
 ```bash
 npm install -D drizzle-kit typescript tsx
 ```
 
-## Database Setup
+### Database Setup
 
 Make sure you have a Postgres database running and configured. Install the Postgres client:
 
@@ -39,7 +54,17 @@ npm install pg
 npm install -D @types/pg
 ```
 
-<Callout type="warn" title="Next Steps">
-  After installation, continue to the Quickstart guide to configure Corsair and create your first queries.
+## Initialize Your Project
+
+After installing dependencies, run the init command to set up your project structure:
+
+```bash
+pnpm corsair init
+```
+
+This will guide you through an interactive setup and create all necessary files and folders.
+
+<Callout type="info" title="Next Steps">
+  After initialization, you can start creating queries and mutations with `pnpm corsair query` and `pnpm corsair mutation`. See the CLI guide for more details.
 </Callout>
 
